# iPerf-Android-Library

./: README.md  local.properties  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/shubhendu/iperfandroiddemo/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/java/com/shubhendu/iperfandroiddemo/: HomeFragment.java  MainActivity.java
app/src/main/res/layout/: activity_main.xml  fragment_home.xml
app/src/main/res/menu/: menu_main.xml
app/src/main/res/navigation/: nav_graph.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/main/res/values-v23/: themes.xml
app/src/test/java/com/shubhendu/iperfandroiddemo/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
iPerfAndroid/: build.gradle
iPerfAndroid/src/androidTest/java/com/shubhendu/iperfandroid/: ExampleInstrumentedTest.java
iPerfAndroid/src/main/cpp/: CMakeLists.txt  iperf.c
iPerfAndroid/src/main/cpp/src/: Makefile  iperf.h  iperf_api.c  iperf_client_api.c  iperf_error.c  iperf_locale.h  main.c  net.c
iPerfAndroid/src/main/java/com/shubhendu/iperfandroid/: IPPerfTestListener.java  NativeLib.java
iPerfAndroid/src/test/java/com/shubhendu/iperfandroid/: ExampleUnitTest.java
